--- a/Lucene.net Demo/Lucene.net_Demo.csproj
+++ b/Lucene.net Demo/Lucene.net_Demo.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionModel.cs" />
+    <Compile Include="SearchHelper.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
