--- a/Lucene.net Demo/Lucene.net_Demo.csproj
+++ b/Lucene.net Demo/Lucene.net_Demo.csproj
@@ -70,6 +70,7 @@
       <HintPath>..\packages\PanGu.Lucene.Analyzer.0.0.2\lib\PanGu.Lucene.Analyzer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -78,11 +79,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BulidIndex.cs" />
     <Compile Include="ExcelHelper.cs" />
+    <Compile Include="LuneceSearch.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionModel.cs" />
     <Compile Include="SearchHelper.cs" />
+    <Compile Include="text.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
