--- a/Lucene.net Demo/packages.config
+++ b/Lucene.net Demo/packages.config
@@ -8,4 +8,7 @@
   <package id="PanGu.Lucene.Analyzer" version="0.0.2" targetFramework="net45" />
   <package id="PanGu.Segment" version="0.0.3" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
+  <package id="z.Lucene.Net" version="3.0.3.4" targetFramework="net45" />
+  <package id="z.PanGu" version="2.4.1.5" targetFramework="net45" />
+  <package id="z.PanGu.Lucene.Analyzer" version="2.4.1.8" targetFramework="net45" />
 </packages>
