--- a/Lucene.net Demo/Lucene.net_Demo.csproj
+++ b/Lucene.net Demo/Lucene.net_Demo.csproj
@@ -41,9 +41,6 @@
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Lucene.Net">
-      <HintPath>..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
-    </Reference>
     <Reference Include="NPOI, Version=2.4.0.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
       <HintPath>..\packages\NPOI.2.4.0\lib\net40\NPOI.dll</HintPath>
       <Private>True</Private>
@@ -60,14 +57,8 @@
       <HintPath>..\packages\NPOI.2.4.0\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="PanGu">
-      <HintPath>..\packages\PanGu.Segment.0.0.3\lib\PanGu.dll</HintPath>
-    </Reference>
     <Reference Include="PanGu.HighLight">
       <HintPath>..\packages\PanGu.Segment.0.0.3\lib\PanGu.HighLight.dll</HintPath>
-    </Reference>
-    <Reference Include="PanGu.Lucene.Analyzer">
-      <HintPath>..\packages\PanGu.Lucene.Analyzer.0.0.2\lib\PanGu.Lucene.Analyzer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -77,6 +68,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="z.Lucene.Net">
+      <HintPath>..\packages\z.Lucene.Net.3.0.3.4\lib\net35\z.Lucene.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="z.PanGu">
+      <HintPath>..\packages\z.PanGu.2.4.1.5\lib\net20\z.PanGu.dll</HintPath>
+    </Reference>
+    <Reference Include="z.PanGu.Lucene.Analyzer">
+      <HintPath>..\packages\z.PanGu.Lucene.Analyzer.2.4.1.8\lib\net35\z.PanGu.Lucene.Analyzer.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExcelHelper.cs" />
